force-app/main/default/objects/AI_Provider_Settings__c/fields/Ada_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Ada_Endpoint__c</fullName>
    <label>Ada_Endpoint_</label>
    <type>Text</type>
    <length>255</length>
</CustomField>