force-app/main/default/objects/AI_Provider_Settings__c/fields/Default_Provider__c.field-meta.xml
<CustomField>
    <fullName>Default_Provider__c</fullName>
    <label>Default_Provider_</label>
    <type>Text</type>
    <length>100</length>
</CustomField>