force-app/main/default/objects/AI_Provider_Settings__c/fields/Enable_Provider_Failover__c.field-meta.xml
<CustomField>
    <fullName>Enable_Provider_Failover__c</fullName>
    <label>Enable_Provider_Failover_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>