force-app/main/default/objects/AI_Provider_Settings__c/fields/Intercom_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Endpoint__c</fullName>
    <label>Intercom_Endpoint_</label>
    <type>Text</type>
    <length>255</length>
</CustomField>